  - Cannot run 'Create Fake Drive' for a new prefix with a win32 architecture [BUG-14]
  - System Language autodetection does not work [BUG-13]
  - Error while loading application settings by key: 'WineLibs'. File or path does not exist: "" [BUG-12]
  - q4wine doesn't clean up user's tmp directory [BUG-11]
 
 Removed:
  - File -> Install wizard menu entry;

Version 0.999-rc8
 Added:
  - Prefix execution template string;

 Fixed:
  - regression: selection focus jumps to prefix name on subdirectory selection;
  - regression: can't load user selected language

Version 0.999-rc7
 Added:
  - Winetricks database cache;
  - Merge Wintricks core;
  - New System Config interface;
  - Mac OS X support;
  - Pre and Post run Icon scripts [3465598][3388054][2716333];
  - Icon and Prefix sorting (name, date);
  - Version string to About page;
  - Handler for wrong URL in wine app db;
  - Add Logging subsystem activation\deactivation button to Logging tab toolbar;
  - Add taskmgr, winemine, iexplorer, control, oleview icons to prefix's system folder;
  - New system icons from latest wine version;
  - Install program icons in $prefix/share/icons/hicolor/; Add 16,22,32,48,64,96,128,256 icon sizes [3505384];
  - Prefix to translation files names [3506372];
  - Prefix execution template string;

  Fixed:
  - Enhanced win64 support for wine;
  - Better Wine library path autodetection [Linux];
  - Create ~/.local/share/wineprefixes directory if it does not exist;
  - Error is Desktop paths are empty;
  - Desktop Paths are wrongly labeled [3491775];
  - Win32 prefix creation while prefix directory exists;
  - Unite Icon\Detail toolbar actions;
  - No translations autoupdate at project build. Use `make translations` insted;
  - Fixed process refresh loop;
  - Extended env command after console terminal;
  - Updated README file: added "Known Issues" section;
  - Set WINEDEBUG to '-all' if logging subsystem disabled and program was
  executed not in console session;